# rust_exercises

exercises/: Cargo.toml
exercises/src/: main.rs
