[package]
name = "exercises"
version = "0.1.0"
authors = ["ihateface <ihateface@autistici.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "temperature"
path = "src/temperature.rs"

[[bin]]
name = "fibonnaci"
path = "src/fibonnaci.rs"
